--- a/octopus-ai/package.json
+++ b/octopus-ai/package.json
@@ -10,11 +10,11 @@
   "scripts": {
     "convert:debug": "ts-node ./scripts/convert-render-debug.ts",
     "convert:all": "ts-node ./scripts/convert-design.ts",
-    "test": "echo 'Tests are not implemented yet'",
     "build": "tsc --build ./tsconfig.json",
     "clean": "rimraf ./node_modules ./lib ./workdir",
     "types:check": "tsc --noEmit",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "test": "echo 'Tests are not implemented yet'"
   },
   "author": "",
   "license": "UNLICENSED",
@@ -23,7 +23,6 @@
     "@avocode/octopus-common": "3.0.0-rc.23",
     "@avocode/octopus-ts": "3.0.0-alpha.33",
     "@opendesign/illustrator-parser-pdfcpu": "^1.0.1-0",
-    "crc-32": "^1.2.2",
     "dotenv": "16.0.0",
     "lodash": "^4.17.21",
     "paper": "^0.12.15",
@@ -36,12 +35,14 @@
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
+    "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.178",
     "@types/node": "*",
     "@types/pino": "^6.3.3",
     "@types/uuid": "^8.3.1",
     "chalk": "^4.1.2",
     "jest": "^27.3.1",
+    "ts-jest": "^27.1.3",
     "ts-node": "10.4.0"
   }
 }
