--- a/octopus-ai/package.json
+++ b/octopus-ai/package.json
@@ -32,7 +32,6 @@
     "pino": "^6.7.0",
     "pino-pretty": "^4.3.0",
     "read-pkg-up": "7.0.1",
-    "rimraf": "^3.0.2",
     "time-stamp": "^2.2.0",
     "tslib": "^2.4.0",
     "uuid": "^8.3.2"
@@ -50,6 +49,7 @@
     "jest": "^27.3.1",
     "jsondiffpatch": "^0.4.1",
     "ts-jest": "^27.1.3",
-    "ts-node": "10.4.0"
+    "ts-node": "10.4.0",
+    "rimraf": "^3.0.2"
   }
 }
