--- a/octopus-ai/package.json
+++ b/octopus-ai/package.json
@@ -15,7 +15,7 @@
     "types:check": "tsc --noEmit",
     "watch": "tsc -w",
     "test": "yarn test:unit && yarn test:integration",
-    "test:unit": "echo 'Unit tests are not implemented yet'",
+    "test:unit": "yarn jest",
     "test:integration": "ts-node test/integration",
     "test:integration:update": "ts-node test/integration/update-tests.ts"
   },
