--- a/octopus-fig/package.json
+++ b/octopus-fig/package.json
@@ -9,12 +9,16 @@
     "bundle:web": "npx vite build -c vite.web.js && npx vite build -c vite.web.worker.js",
     "build": "tsc --build ./tsconfig.json",
     "clean:workdir": "rimraf ./workdir/*",
-    "clean": "rimraf ./node_modules ./lib ./workdir",
+    "clean": "rimraf ./node_modules ./lib ./workdir ./test/integration/report",
     "convert:debug": "ts-node ./scripts/convert-api-debug.ts",
     "convert:local": "ts-node ./scripts/convert-api-local.ts",
     "parse": "ts-node ./scripts/test-parse.ts",
     "prepack": "rimraf ./lib && yarn run build",
-    "test": "yarn jest",
+    "test": "yarn test:unit && yarn test:integration",
+    "test:unit": "yarn jest",
+    "test:integration": "ts-node test/integration",
+    "test:integration:update:assets": "ts-node test/integration/update-assets.ts",
+    "test:integration:update:tests": "ts-node test/integration/update-tests.ts",
     "types:check": "tsc --noEmit",
     "watch": "tsc -w"
   },
@@ -23,7 +27,6 @@
     "@avocode/manifest-ts": "3.0.0-alpha.36",
     "@avocode/octopus-common": "3.0.0-rc.23",
     "@avocode/octopus-ts": "3.0.0-alpha.33",
-    "chalk": "^4.1.2",
     "dotenv": "16.0.0",
     "image-size": "^1.0.1",
     "lodash": "^4.17.21",
@@ -40,7 +43,10 @@
     "@types/pino": "^6.3.3",
     "@types/rimraf": "^3.0.2",
     "@types/uuid": "^8.3.1",
+    "chalk": "^4.1.2",
+    "handlebars": "^4.7.7",
     "jest": "^27.3.1",
+    "jsondiffpatch": "^0.4.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
     "ts-node": "10.8.0",
