--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,7 @@ lint:
 test:
   stage: test
   script:
-    - echo "hello world" > ci-test.out
     - yarn test
   artifacts:
-    paths:
-      - ci-test.out
+    untracked: true
+    when: on_failure
