gitlab CI fixes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ stages:
 
 before_script:
   - echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > .npmrc
+  - node -v
   - yarn
   - yarn build
 
@@ -22,5 +23,6 @@ test:
   script:
     - yarn test
   artifacts:
-    untracked: true
     when: on_failure
+    paths:
+      - '**/report/*.html'
