--- a/octopus-ai/package.json
+++ b/octopus-ai/package.json
@@ -38,7 +38,6 @@
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
-    "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.178",
     "@types/node": "*",
     "@types/pino": "^6.3.3",
@@ -46,10 +45,9 @@
     "@types/uuid": "^8.3.1",
     "chalk": "^4.1.2",
     "handlebars": "^4.7.7",
-    "jest": "^27.3.1",
     "jsondiffpatch": "^0.4.1",
-    "ts-jest": "^27.1.3",
     "ts-node": "10.4.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "vitest": "^0.23.4"
   }
 }
