--- a/octopus-common/package.json
+++ b/octopus-common/package.json
@@ -10,7 +10,7 @@
     "clean": "rimraf ./node_modules ./dist",
     "clean-build": "rimraf ./dist && yarn run build",
     "watch": "tsc -w",
-    "test": "yarn jest",
+    "test": "vitest run",
     "types:check": "tsc --noEmit"
   },
   "dependencies": {
@@ -20,15 +20,15 @@
   },
   "devDependencies": {
     "@avocode/octopus-ts": "3.0.0-alpha.33",
-    "@types/jest": "^27.4.0",
+    "@types/chalk": "^2.2.0",
     "@types/lodash": "^4.14.178",
     "@types/node": "*",
     "@types/uuid": "^8.3.1",
-    "jest": "^27.3.1",
+    "chalk": "^4.1.2",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.3",
     "ts-node": "10.4.0",
-    "typescript": "4.4.4"
+    "typescript": "4.6.4",
+    "vitest": "^0.23.4"
   },
   "files": [
     "dist"
