--- a/octopus-psd/package.json
+++ b/octopus-psd/package.json
@@ -13,7 +13,7 @@
     "convert:source:debug": "ts-node ./scripts/convert-source-debug.ts",
     "convert:source:local": "ts-node ./scripts/convert-source-local.ts",
     "prepack": "rimraf ./lib && yarn run build",
-    "test": "yarn jest",
+    "test": "vitest run",
     "types:check": "tsc --noEmit",
     "watch": "tsc -w"
   },
@@ -37,16 +37,14 @@
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
-    "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.178",
     "@types/node": "*",
     "@types/pino": "^6.3.3",
     "@types/rimraf": "^3.0.2",
     "@types/uuid": "^8.3.1",
-    "jest": "^27.3.1",
-    "ts-jest": "^27.1.3",
     "ts-node": "10.5.0",
-    "typescript": "4.4.4"
+    "typescript": "4.6.4",
+    "vitest": "^0.23.4"
   },
   "files": [
     "lib/src"
