--- a/octopus-ai/package.json
+++ b/octopus-ai/package.json
@@ -47,8 +47,8 @@
     "handlebars": "^4.7.7",
     "jest": "^27.3.1",
     "jsondiffpatch": "^0.4.1",
+    "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
-    "ts-node": "10.4.0",
-    "rimraf": "^3.0.2"
+    "ts-node": "10.4.0"
   }
 }
