readme.md fixes

--- a/octopus-fig/package.json
+++ b/octopus-fig/package.json
@@ -10,9 +10,9 @@
     "build": "tsc --build ./tsconfig.json",
     "clean:workdir": "rimraf ./workdir/*",
     "clean": "rimraf ./node_modules ./lib ./workdir ./test/integration/report",
-    "convert:debug": "ts-node ./scripts/convert-api-debug.ts",
-    "convert:local": "ts-node ./scripts/convert-api-local.ts",
-    "parse": "ts-node ./scripts/test-parse.ts",
+    "convert:debug": "ts-node ./example-node/convert-api-debug.ts",
+    "convert:local": "ts-node ./example-node/convert-api-local.ts",
+    "parse": "ts-node ./example-node/test-parse.ts",
     "prepack": "rimraf ./lib && yarn run build",
     "test": "yarn test:unit && yarn test:integration",
     "test:unit": "yarn jest",
