--- a/octopus-fig/.env.example
+++ b/octopus-fig/.env.example
@@ -1,6 +1,8 @@
-API_TOKEN=
 NODE_ENV=debug # production | development | debug
 LOG_LEVEL=debug # fatal | error | warn | info | debug | trace | silent
+
+# Debug ENVs used in demo scripts
+API_TOKEN=
 SHOULD_RENDER=false
 ODE_RENDERER_CMD=ode-renderer-cli
 ODE_IGNORE_VALIDATION=false
