--- a/octopus-fig/tsconfig.json
+++ b/octopus-fig/tsconfig.json
@@ -16,5 +16,5 @@
     "lib": ["es2019", "ES2015.Proxy", "dom", "ES2021.String"],
     "paths": {}
   },
-  "include": ["src/**/*", "test/**/*", "scripts"]
+  "include": ["src", "test", "example-node"]
 }
