fixes in Readme.md

--- a/octopus-psd/package.json
+++ b/octopus-psd/package.json
@@ -2,16 +2,16 @@
   "name": "@avocode/octopus-psd",
   "version": "3.0.0-rc.5",
   "description": "Octopus PSD converter, converts .psd files to Octopus 3+ format.",
-  "license": "UNLICENSED",
+  "license": "Apache-2.0",
   "main": "lib/src/index.js",
   "scripts": {
     "build": "tsc --build ./tsconfig.json",
     "clean:workdir": "rimraf ./workdir/*",
     "clean": "rimraf ./node_modules ./lib ./workdir",
-    "convert:psd:debug": "ts-node ./scripts/convert-psd-debug.ts",
-    "convert:psd:local": "ts-node ./scripts/convert-psd-local.ts",
-    "convert:source:debug": "ts-node ./scripts/convert-source-debug.ts",
-    "convert:source:local": "ts-node ./scripts/convert-source-local.ts",
+    "convert:psd:debug": "ts-node ./example-node/convert-psd-debug.ts",
+    "convert:psd:local": "ts-node ./example-node/convert-psd-local.ts",
+    "convert:source:debug": "ts-node ./example-node/convert-source-debug.ts",
+    "convert:source:local": "ts-node ./example-node/convert-source-local.ts",
     "prepack": "rimraf ./lib && yarn run build",
     "test": "yarn jest",
     "types:check": "tsc --noEmit",
