--- a/octopus-psd/.env.example
+++ b/octopus-psd/.env.example
@@ -1,7 +1,8 @@
-RENDERING_PATH=ode-renderer-cli
-RENDERING_IGNORE_VALIDATION=false
-FONTS_PATH=/Users/your-user/path-to/fonts
-SENTRY_DSN=
-LOG_LEVEL=debug # fatal | error | warn | info | debug | trace | silent
 NODE_ENV=debug # production | development | debug
-CONVERT_RENDER=true
+LOG_LEVEL=debug # fatal | error | warn | info | debug | trace | silent
+
+# Debug ENVs used in demo scripts
+SHOULD_RENDER=false
+ODE_RENDERER_CMD=ode-renderer-cli
+ODE_IGNORE_VALIDATION=false
+FONTS_PATH=/Users/your-user/path-to/fonts
