--- a/octopus-psd/package.json
+++ b/octopus-psd/package.json
@@ -7,13 +7,18 @@
   "scripts": {
     "build": "tsc --build ./tsconfig.json",
     "clean:workdir": "rimraf ./workdir/*",
-    "clean": "rimraf ./node_modules ./lib ./workdir",
+    "clean": "rimraf ./node_modules ./lib ./dist ./workdir ./test/integration/report",
     "convert:psd:debug": "ts-node ./example-node/convert-psd-debug.ts",
     "convert:psd:local": "ts-node ./example-node/convert-psd-local.ts",
     "convert:source:debug": "ts-node ./example-node/convert-source-debug.ts",
     "convert:source:local": "ts-node ./example-node/convert-source-local.ts",
     "prepack": "rimraf ./lib && yarn run build",
-    "test": "yarn jest",
+    "test": "yarn test:unit && yarn test:integration",
+    "test:unit": "yarn jest",
+    "test:integration": "ts-node test/integration",
+    "test:integration:update": "yarn test:integration:update:assets && yarn test:integration:update:tests",
+    "test:integration:update:assets": "ts-node test/integration/update-assets.ts",
+    "test:integration:update:tests": "ts-node test/integration/update-tests.ts",
     "types:check": "tsc --noEmit",
     "watch": "tsc -w"
   },
@@ -43,10 +48,12 @@
     "@types/pino": "^6.3.3",
     "@types/rimraf": "^3.0.2",
     "@types/uuid": "^8.3.1",
+    "handlebars": "^4.7.7",
     "jest": "^27.3.1",
+    "jsondiffpatch": "^0.4.1",
     "ts-jest": "^27.1.3",
     "ts-node": "10.5.0",
-    "typescript": "4.4.4"
+    "typescript": "4.6.4"
   },
   "files": [
     "lib/src"
