--- a/octopus-fig/package.json
+++ b/octopus-fig/package.json
@@ -9,7 +9,7 @@
     "bundle:web": "npx vite build -c vite.web.js && npx vite build -c vite.web.worker.js",
     "build": "tsc --build ./tsconfig.json",
     "clean:workdir": "rimraf ./workdir/*",
-    "clean": "rimraf ./node_modules ./lib ./workdir ./test/integration/report",
+    "clean": "rimraf ./node_modules ./lib ./dist ./workdir ./test/integration/report",
     "convert:debug": "ts-node ./example-node/convert-api-debug.ts",
     "convert:local": "ts-node ./example-node/convert-api-local.ts",
     "parse": "ts-node ./example-node/test-parse.ts",
@@ -27,7 +27,7 @@
     "@avocode/figma-parser": "3.0.0-rc.12",
     "@avocode/manifest-ts": "3.0.0-alpha.36",
     "@avocode/octopus-common": "3.0.0-rc.23",
-    "@avocode/octopus-ts": "3.0.0-alpha.33",
+    "@avocode/octopus-ts": "3.0.0-alpha.36",
     "dotenv": "16.0.0",
     "image-size": "^1.0.1",
     "lodash": "^4.17.21",
