--- a/octopus-fig/package.json
+++ b/octopus-fig/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@avocode/octopus-fig",
   "version": "3.0.0-rc.6",
-  "description": "Octopus Figma converter, converts Figma designs to Octopus 3+ format.",
+  "description": "Figma HTTP API format to Octopus 3 converter.",
   "license": "Apache-2.0",
   "main": "dist/src/index.js",
   "scripts": {
@@ -10,9 +10,8 @@
     "build": "tsc --build ./tsconfig.json",
     "clean:workdir": "rimraf ./workdir/*",
     "clean": "rimraf ./node_modules ./lib ./dist ./workdir ./test/integration/report",
-    "convert:debug": "ts-node ./example-node/convert-api-debug.ts",
-    "convert:local": "ts-node ./example-node/convert-api-local.ts",
-    "parse": "ts-node ./example-node/test-parse.ts",
+    "convert:debug": "ts-node ./examples/node/convert-api-debug.ts",
+    "convert:local": "ts-node ./examples/node/convert-api-local.ts",
     "prepack": "rimraf ./lib && yarn run build",
     "test": "yarn test:unit && yarn test:integration",
     "test:unit": "yarn jest",
@@ -24,26 +23,26 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@avocode/figma-parser": "3.0.0-rc.12",
+    "@avocode/figma-parser": "3.0.0-rc.13",
     "@avocode/manifest-ts": "3.0.0-alpha.37",
-    "@avocode/octopus-common": "3.0.0-rc.25",
+    "@avocode/octopus-common": "3.0.0-rc.26",
     "@avocode/octopus-ts": "3.0.0-alpha.37",
+    "@types/lodash": "^4.14.178",
+    "@types/pino": "^6.3.3",
+    "@types/uuid": "^8.3.1",
     "dotenv": "16.0.0",
     "image-size": "^1.0.1",
     "lodash": "^4.17.21",
     "paper": "0.12.15",
-    "pino": "^6.7.0",
     "pino-pretty": "^4.3.0",
+    "pino": "^6.7.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
     "@types/jest": "^27.4.0",
-    "@types/lodash": "^4.14.178",
     "@types/node": "*",
-    "@types/pino": "^6.3.3",
     "@types/rimraf": "^3.0.2",
-    "@types/uuid": "^8.3.1",
     "chalk": "^4.1.2",
     "handlebars": "^4.7.7",
     "jest": "^27.3.1",
