--- a/figma-parser-s3-plugin/package.json
+++ b/figma-parser-s3-plugin/package.json
@@ -1,29 +1,29 @@
 {
   "name": "@avocode/figma-parser-s3-plugin",
-  "version": "3.0.0-rc.1",
+  "version": "3.0.0-rc.2",
   "license": "UNLICENSED",
   "description": "Figma Parser S3 plugin",
-  "devDependencies": {
-    "@types/lodash": "^4.14.178",
-    "@types/node": "*",
-    "@types/pino": "^6.3.3",
-    "ts-node": "10.5.0",
-    "typescript": "4.4.4"
-  },
   "scripts": {
-    "build": "npx tsc --build ./tsconfig.json",
+    "build": "tsc --build ./tsconfig.json",
     "clean": "npx rimraf ./node_modules ./lib",
     "prepack": "npx rimraf ./lib && yarn run build",
-    "watch": "npx tsc -w",
+    "watch": "tsc -w",
     "test": "echo 'Tests are not implemented yet'",
     "types:check": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.178",
+    "@types/pino": "^6.3.3",
     "aws-sdk": "^2.978.0",
     "dotenv": "16.0.0",
     "lodash": "^4.17.21",
     "pino": "^6.7.0",
     "pino-pretty": "^4.3.0"
+  },
+  "devDependencies": {
+    "@types/node": "*",
+    "ts-node": "10.5.0",
+    "typescript": "4.6.4"
   },
   "files": [
     "lib/src"
