--- a/figma-parser/package.json
+++ b/figma-parser/package.json
@@ -1,35 +1,24 @@
 {
   "name": "@avocode/figma-parser",
-  "version": "3.0.0-rc.12",
+  "version": "3.0.0-rc.13",
   "license": "UNLICENSED",
   "description": "Figma parser, downloads assets from Figma APIs",
-  "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@types/chalk": "^2.2.0",
-    "@types/lodash": "^4.14.178",
-    "@types/node": "*",
-    "@types/pino": "^6.3.3",
-    "@types/uuid": "^8.3.1",
-    "aws-sdk": "^2.978.0",
-    "chalk": "^4.1.2",
-    "jest": "^27.3.1",
-    "ts-node": "10.5.0",
-    "typescript": "4.4.4",
-    "vite": "^2.9.1"
-  },
   "scripts": {
     "bundle": "yarn run bundle:web",
     "bundle:web": "npx vite build -c vite.web.js",
-    "build": "npx tsc --build ./tsconfig.json",
+    "build": "tsc --build ./tsconfig.json",
     "clean": "npx rimraf ./node_modules ./lib",
     "prepack": "npx rimraf ./lib && yarn run build",
-    "watch": "npx tsc -w",
+    "watch": "tsc -w",
     "test": "echo 'Tests are not implemented yet'",
     "types:check": "tsc --noEmit"
   },
   "dependencies": {
     "@sentry/browser": "6.14.0",
     "@sentry/node": "6.14.0",
+    "@types/lodash": "^4.14.178",
+    "@types/pino": "^6.3.3",
+    "@types/uuid": "^8.3.1",
     "dotenv": "16.0.0",
     "eventemitter3": "^4.0.7",
     "got": "^11.5.1",
@@ -39,6 +28,17 @@
     "pino-pretty": "^4.3.0",
     "read-pkg-up": "7.0.1",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@types/chalk": "^2.2.0",
+    "@types/node": "*",
+    "aws-sdk": "^2.978.0",
+    "chalk": "^4.1.2",
+    "jest": "^27.3.1",
+    "ts-node": "10.5.0",
+    "typescript": "4.6.4",
+    "vite": "^2.9.1"
   },
   "files": [
     "lib/src"
