--- a/octopus-xd/package.json
+++ b/octopus-xd/package.json
@@ -10,9 +10,9 @@
     "convert:all": "npx ts-node ./scripts/convert-design.ts",
     "convert:all:debug": "npx ts-node ./scripts/convert-design-debug.ts",
     "clean:workdir": "npx rimraf ./workdir/*",
-    "build": "npx tsc --build ./tsconfig.json",
+    "build": "tsc --build ./tsconfig.json",
     "prepack": "npx rimraf ./lib && yarn run build",
-    "watch": "npx tsc -w",
+    "watch": "tsc -w",
     "test": "echo 'Tests are not implemented yet'",
     "types:check": "tsc --noEmit"
   },
@@ -20,13 +20,17 @@
     "@avocode/manifest-ts": "3.0.0-alpha.33",
     "@avocode/octopus-common": "3.0.0-rc.23",
     "@avocode/octopus-ts": "3.0.0-alpha.33",
+    "@types/blueimp-md5": "^2.18.0",
+    "@types/lodash": "^4.14.178",
+    "@types/pino": "^6.3.3",
+    "@types/uuid": "^8.3.1",
     "blueimp-md5": "^2.19.0",
     "dotenv": "16.0.0",
     "fflate": "^0.7.1",
     "lodash": "^4.17.21",
     "paper": "0.12.4",
-    "pino": "^6.7.0",
     "pino-pretty": "^4.3.0",
+    "pino": "^6.7.0",
     "read-pkg-up": "7.0.1",
     "time-stamp": "^2.2.0",
     "uuid": "^8.3.2"
@@ -34,15 +38,11 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@types/chalk": "^2.2.0",
-    "@types/lodash": "^4.14.178",
     "@types/node": "*",
-    "@types/pino": "^6.3.3",
-    "@types/uuid": "^8.3.1",
-    "@types/blueimp-md5": "^2.18.0",
     "chalk": "^4.1.2",
     "jest": "^27.3.1",
     "ts-node": "10.5.0",
-    "typescript": "4.4.4",
+    "typescript": "4.6.4",
     "vite": "^2.9.1"
   },
   "description": "Octopus XD converter, converts .xd files to Octopus 3+ format.",
