--- a/octopus-ai/package.json
+++ b/octopus-ai/package.json
@@ -2,10 +2,7 @@
   "name": "@avocode/octopus-ai",
   "version": "3.0.0-rc.1",
   "description": "Octopus AI converter, converts .ai files to Octopus 3+ format.",
-  "files": [
-    "lib/src",
-    "lib/package.json"
-  ],
+  "license": "Apache-2.0",
   "main": "lib/src/index.js",
   "scripts": {
     "convert:debug": "ts-node ./scripts/convert-render-debug.ts",
@@ -19,8 +16,6 @@
     "test:integration": "ts-node test/integration",
     "test:integration:update": "ts-node test/integration/update-tests.ts"
   },
-  "author": "",
-  "license": "UNLICENSED",
   "dependencies": {
     "@avocode/manifest-ts": "3.0.0-alpha.33",
     "@avocode/octopus-common": "3.0.0-rc.23",
@@ -49,6 +44,11 @@
     "jsondiffpatch": "^0.4.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
-    "ts-node": "10.4.0"
-  }
+    "ts-node": "10.4.0",
+    "typescript": "4.6.4"
+  },
+  "files": [
+    "lib/src",
+    "lib/package.json"
+  ]
 }
