--- a/octopus-ai/tsconfig.json
+++ b/octopus-ai/tsconfig.json
@@ -15,5 +15,5 @@
     "allowJs": false,
     "lib": ["es2019", "ES2015.Proxy", "dom"]
   },
-  "include": ["src/**/*", "test/**/*", "scripts"]
+  "include": ["src/**/*", "test/**/*", "examples"]
 }
