--- a/octopus-fig/package.json
+++ b/octopus-fig/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@avocode/octopus-fig",
-  "version": "3.0.0-rc.7",
+  "version": "3.0.0-rc.9",
   "description": "Figma HTTP API format to Octopus 3+ converter.",
   "license": "Apache-2.0",
-  "main": "dist/src/index.js",
   "scripts": {
     "bundle": "yarn run bundle:web",
     "bundle:web": "npx vite build -c vite.web.js && npx vite build -c vite.web.worker.js",
@@ -47,13 +46,18 @@
     "handlebars": "^4.7.7",
     "jest": "^27.3.1",
     "jsondiffpatch": "^0.4.1",
+    "read-pkg-up": "7.0.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
     "ts-node": "10.8.0",
     "typescript": "4.6.4"
   },
   "files": [
-    "lib/src",
-    "lib/package.json"
-  ]
+    "lib/src"
+  ],
+  "main": "./lib/src/index-web.js",
+  "exports": {
+    "node": "./lib/src/index-node.js",
+    "default": "./lib/src/index-web.js"
+  }
 }
