--- a/octopus-psd/package.json
+++ b/octopus-psd/package.json
@@ -3,7 +3,6 @@
   "version": "3.0.0-rc.5",
   "description": "Octopus PSD converter, converts .psd files to Octopus 3+ format.",
   "license": "Apache-2.0",
-  "main": "lib/src/index.js",
   "scripts": {
     "build": "tsc --build ./tsconfig.json",
     "clean:workdir": "rimraf ./workdir/*",
@@ -25,6 +24,7 @@
     "@avocode/octopus-common": "3.0.0-rc.26",
     "@avocode/octopus-ts": "3.0.0-alpha.37",
     "@avocode/psd-parser": "0.8.4",
+    "@types/chalk": "^2.2.0",
     "@types/lodash": "^4.14.178",
     "@types/pino": "^6.3.3",
     "@types/rimraf": "^3.0.2",
@@ -42,7 +42,6 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/chalk": "^2.2.0",
     "@types/jest": "^27.4.0",
     "@types/node": "*",
     "handlebars": "^4.7.7",
@@ -53,6 +52,8 @@
     "typescript": "4.6.4"
   },
   "files": [
-    "lib/src"
-  ]
+    "lib/src",
+    "lib/package.json"
+  ],
+  "main": "lib/src/index.js"
 }
