--- a/octopus-fig/package.json
+++ b/octopus-fig/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@avocode/octopus-fig",
-  "version": "3.0.0-rc.10",
+  "version": "3.0.0-rc.14",
   "description": "Figma HTTP API format to Octopus 3+ converter.",
   "license": "Apache-2.0",
   "scripts": {
@@ -46,7 +46,6 @@
     "handlebars": "^4.7.7",
     "jest": "^27.3.1",
     "jsondiffpatch": "^0.4.1",
-    "read-pkg-up": "7.0.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
     "ts-node": "10.8.0",
@@ -54,14 +53,7 @@
   },
   "files": [
     "lib/src",
-    "lib/package.json",
-    "node.js",
-    "web.js"
+    "lib/package.json"
   ],
-  "type": "module",
-  "exports": {
-    ".": "./lib/src/index-web.js",
-    "./web.js": "./lib/src/index-web.js",
-    "./node.js": "./lib/src/index-node.js"
-  }
+  "main": "./lib/src/index-web.js"
 }
