--- a/octopus-xd/tsconfig.json
+++ b/octopus-xd/tsconfig.json
@@ -15,5 +15,5 @@
     "allowJs": true,
     "lib": ["es2019", "ES2015.Proxy", "dom"]
   },
-  "include": ["src/**/*", "test/**/*", "scripts"]
+  "include": ["src", "test", "examples/node"]
 }
