--- a/octopus-ai/package.json
+++ b/octopus-ai/package.json
@@ -1,12 +1,18 @@
 {
   "name": "@avocode/octopus-ai",
   "version": "3.0.0-rc.1",
-  "description": "Octopus AI converter, converts .ai files to Octopus 3+ format.",
+  "description": "Octopus Adobe Illustrator format to Octopus 3+ converter.",
   "files": [
     "lib/src",
     "lib/package.json"
   ],
   "main": "lib/src/index.js",
+  "keywords": [
+    "Octopus 3+",
+    "Node.js",
+    "Adobe Illustrator",
+    "Typescript"
+  ],
   "scripts": {
     "convert:debug": "ts-node ./examples/node/convert-api-debug.ts",
     "convert:local": "ts-node ./examples/node/convert-api-local.ts",
@@ -19,8 +25,7 @@
     "test:integration": "ts-node test/integration",
     "test:integration:update": "ts-node test/integration/update-tests.ts"
   },
-  "author": "",
-  "license": "UNLICENSED",
+  "license": "Apache-2.0",
   "dependencies": {
     "@avocode/manifest-ts": "3.0.0-alpha.33",
     "@avocode/octopus-common": "3.0.0-rc.23",
@@ -31,7 +36,6 @@
     "paper": "^0.12.15",
     "pino": "^6.7.0",
     "pino-pretty": "^4.3.0",
-    "read-pkg-up": "7.0.1",
     "time-stamp": "^2.2.0",
     "uuid": "^8.3.2"
   },
