remove process.cwd

--- a/octopus-ai/.env.example
+++ b/octopus-ai/.env.example
@@ -5,3 +5,4 @@ LOG_LEVEL=debug
 SHOULD_RENDER=true
 ODE_RENDERER_CMD=ode-renderer-cli
 ODE_IGNORE_VALIDATION=false
+FONTS_PATH=/Users/johndoe/work/octopus-converters/octopus-ai/fonts
