--- a/octopus-xd/package.json
+++ b/octopus-xd/package.json
@@ -48,9 +48,5 @@
     "lib/src",
     "lib/package.json"
   ],
-  "main": "lib/src/index-web.js",
-  "exports": {
-    "node": "./lib/src/index-node.js",
-    "default": "./lib/src/index-web.js"
-  }
+  "main": "lib/src/index-web.js"
 }
