--- a/octopus-fig/package.json
+++ b/octopus-fig/package.json
@@ -19,6 +19,7 @@
     "test:integration:update:assets": "ts-node test/integration/update-assets.ts",
     "test:integration:update:tests": "ts-node test/integration/update-tests.ts",
     "types:check": "tsc --noEmit",
+    "typedoc": "typedoc --excludePrivate src/index-node.ts src/index-web.ts",
     "watch": "tsc -w"
   },
   "dependencies": {
@@ -49,6 +50,7 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
     "ts-node": "10.8.0",
+    "typedoc": "^0.23.18",
     "typescript": "4.6.4"
   },
   "files": [
