--- a/octopus-psd/package.json
+++ b/octopus-psd/package.json
@@ -7,8 +7,8 @@
     "build": "tsc --build ./tsconfig.json",
     "clean:workdir": "rimraf ./workdir/*",
     "clean": "rimraf ./node_modules ./lib ./dist ./workdir ./test/integration/report ./jsdoc",
-    "convert:psd:debug": "ts-node ./examples/node/convert-psd-debug.ts",
-    "convert:psd:local": "ts-node ./examples/node/convert-psd-local.ts",
+    "convert:debug": "ts-node ./examples/node/convert-debug.ts",
+    "convert:local": "ts-node ./examples/node/convert-local.ts",
     "prepack": "rimraf ./lib && yarn run build",
     "test": "yarn test:unit && yarn test:integration",
     "test:unit": "yarn jest",
