--- a/octopus-ai/package.json
+++ b/octopus-ai/package.json
@@ -14,13 +14,14 @@
     "convert:debug": "ts-node ./examples/node/convert-debug.ts",
     "convert:local": "ts-node ./examples/node/convert-local.ts",
     "build": "tsc --build ./tsconfig.json",
-    "clean": "rimraf ./node_modules ./lib ./workdir",
+    "clean": "rimraf ./node_modules ./lib ./workdir ./jsdoc",
     "types:check": "tsc --noEmit",
     "watch": "tsc -w",
     "test": "yarn test:unit && yarn test:integration",
     "test:unit": "yarn jest",
     "test:integration": "ts-node test/integration",
-    "test:integration:update": "ts-node test/integration/update-tests.ts"
+    "test:integration:update": "ts-node test/integration/update-tests.ts",
+    "typedoc": "typedoc --excludePrivate src/index.ts"
   },
   "dependencies": {
     "@opendesign/manifest-ts": "3.0.0-alpha.38",
@@ -50,7 +51,8 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
     "ts-node": "10.4.0",
-    "typescript": "4.6.4"
+    "typescript": "4.6.4",
+    "typedoc": "^0.23.18"
   },
   "files": [
     "lib/src",
