fix after code review

--- a/octopus-psd/package.json
+++ b/octopus-psd/package.json
@@ -11,7 +11,7 @@
     "convert:debug": "yarn build && node ./lib/examples/node/convert-debug.js",
     "convert:local": "yarn build && node ./lib/examples/node/convert-local.js",
     "prepack": "rimraf ./lib && yarn run build",
-    "test": "yarn test:unit && node lib/test/integration/index.js",
+    "test": "yarn test:unit && yarn test:integration",
     "test:unit": "yarn build && yarn node --experimental-vm-modules $(yarn bin jest)",
     "test:integration": "yarn build && node lib/test/integration/index.js",
     "test:integration:update": "yarn build && node lib/test/integration/update-tests.js",
