--- a/figma-plugin/tsconfig.json
+++ b/figma-plugin/tsconfig.json
@@ -4,13 +4,10 @@
     "lib": ["ES2019"],
     "outDir": "./lib/",
     "moduleResolution": "node",
-    "typeRoots": [
-      "node_modules/@types",
-      "node_modules/@figma"
-    ],
+    "typeRoots": ["node_modules/@types", "node_modules/@figma"],
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true,
+    "resolveJsonModule": true
   },
-  "include": [ "./src", "./package.json" ],
+  "include": ["./src", "./package.json"]
 }
