--- a/packages/figma-plugin/package.json
+++ b/packages/figma-plugin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "figma-plugin",
+  "name": "@opendesign/figma-plugin",
   "version": "3.0.0-rc.1",
   "description": "OpenDesign Figma Plugin",
   "license": "Apache-2.0",
