--- a/packages/octopus-fig/package.json
+++ b/packages/octopus-fig/package.json
@@ -9,8 +9,10 @@
     "build": "tsc --build ./tsconfig.json",
     "clean:workdir": "rimraf ./workdir/*",
     "clean": "rimraf ./node_modules ./lib ./dist ./workdir ./test/integration/report",
-    "convert:debug": "ts-node ./examples/node/convert-api-debug.ts",
-    "convert:local": "ts-node ./examples/node/convert-api-local.ts",
+    "convert:api:debug": "ts-node ./examples/node/convert-api-debug.ts",
+    "convert:api:local": "ts-node ./examples/node/convert-api-local.ts",
+    "convert:source:debug": "ts-node ./examples/node/convert-plugin-source-debug.ts",
+    "convert:source:local": "ts-node ./examples/node/convert-plugin-source-local.ts",
     "prepack": "rimraf ./lib && yarn run build",
     "test": "yarn test:unit && yarn test:integration",
     "test:unit": "yarn jest",
