--- a/packages/figma-parser-s3-plugin/package.json
+++ b/packages/figma-parser-s3-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opendesign/figma-parser-s3-plugin",
-  "version": "3.0.0-rc.3",
+  "version": "3.0.0-rc.4",
   "description": "Figma Parser S3 plugin",
   "license": "Apache-2.0",
   "scripts": {
@@ -12,9 +12,9 @@
     "types:check": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/lodash": "^4.14.178",
     "@types/pino": "^6.3.3",
-    "aws-sdk": "^2.978.0",
     "dotenv": "16.0.0",
     "lodash": "^4.17.21",
     "pino": "^6.7.0",
