--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,7 @@ output/
 lib/
 sample
 
-*/example-web/*.umd.js
-*/examples/web/*.umd.js
+**/examples/web/*.umd.js
 **/*/test-report*.html
 
 # Created by https://www.gitignore.io/api/git,node,code,webstorm,sublimetext
