--- a/packages/figma-source-plugin/package.json
+++ b/packages/figma-source-plugin/package.json
@@ -13,8 +13,7 @@
   },
   "dependencies": {
     "buffer": "^6.0.3",
-    "clipboard": "2.0.11",
-    "lodash": "^4.17.21"
+    "clipboard": "2.0.11"
   },
   "devDependencies": {
     "@figma/plugin-typings": "1.54.1",
