--- a/packages/figma-source-plugin/package.json
+++ b/packages/figma-source-plugin/package.json
@@ -5,21 +5,38 @@
   "license": "Apache-2.0",
   "scripts": {
     "clean": "rimraf ./node_modules ./lib ./dist",
-    "build": "esbuild src/code.ts --sourcemap --bundle --outfile=dist/code.js",
     "lint": "echo 'Linting is not implemented yet'",
     "test": "echo 'Tests are not implemented yet'",
-    "types:check": "tsc --noEmit",
-    "watch": "tsc --watch --noEmit"
+    "tsc": "yarn tsc:main && yarn tsc:ui",
+    "tsc:main": "tsc --noEmit -p src/plugin",
+    "tsc:ui": "tsc --noEmit -p src/ui",
+    "tsc:watch": "concurrently -n widget,iframe \"yarn tsc:main -- --watch --preserveWatchOutput\" \"yarn tsc:ui -- --watch --preserveWatchOutput\"",
+    "build": "yarn build:ui && yarn build:main -- --minify",
+    "build:all": "yarn build:ui && yarn build:main",
+    "build:main": "esbuild src/plugin/code.ts --bundle --outfile=dist/code.js",
+    "build:ui": "vite build --minify esbuild --emptyOutDir=false",
+    "build:watch": "concurrently -n widget,iframe \"yarn build:main -- --watch\" \"yarn build:ui -- --watch\"",
+    "dev": "concurrently -n tsc,build,vite 'npm:tsc:watch' 'npm:build:watch' 'vite'"
   },
   "dependencies": {
     "buffer": "^6.0.3",
-    "clipboard": "2.0.11"
+    "clipboard": "2.0.11",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@figma/plugin-typings": "1.54.1",
+    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.0.0",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "concurrently": "^6.3.0",
     "esbuild": "0.15.12",
+    "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "vite": "^2.5.2",
+    "vite-plugin-singlefile": "^0.5.1",
+    "vite-svg-loader": "^3.3.0"
   },
   "files": [
     "dist"
