--- a/packages/octopus-fig/package.json
+++ b/packages/octopus-fig/package.json
@@ -32,6 +32,7 @@
     "@types/lodash": "^4.14.178",
     "@types/pino": "^6.3.3",
     "@types/uuid": "^8.3.1",
+    "buffer": "^6.0.3",
     "dotenv": "16.0.0",
     "image-size": "^1.0.1",
     "lodash": "^4.17.21",
