--- a/packages/figma-source-plugin/package.json
+++ b/packages/figma-source-plugin/package.json
@@ -11,8 +11,8 @@
     "tsc:main": "tsc --noEmit -p src/plugin",
     "tsc:ui": "tsc --noEmit -p src/ui",
     "tsc:watch": "concurrently -n widget,iframe \"yarn tsc:main -- --watch --preserveWatchOutput\" \"yarn tsc:ui -- --watch --preserveWatchOutput\"",
-    "build": "yarn build:ui && yarn build:main -- --minify",
-    "build:all": "yarn build:ui && yarn build:main",
+    "build:minify": "yarn build:ui && yarn build:main -- --minify",
+    "build": "yarn build:ui -- --minify && yarn build:main",
     "build:main": "esbuild src/plugin/code.ts --bundle --outfile=dist/code.js",
     "build:ui": "vite build --minify esbuild --emptyOutDir=false",
     "build:watch": "concurrently -n widget,iframe \"yarn build:main -- --watch\" \"yarn build:ui -- --watch\"",
