--- a/packages/figma-source-plugin/package.json
+++ b/packages/figma-source-plugin/package.json
@@ -12,7 +12,7 @@
     "tsc:ui": "tsc --noEmit -p src/ui",
     "tsc:watch": "concurrently -n widget,iframe \"yarn tsc:main -- --watch --preserveWatchOutput\" \"yarn tsc:ui -- --watch --preserveWatchOutput\"",
     "build:minify": "yarn build:ui && yarn build:main -- --minify",
-    "build": "yarn build:ui -- --minify && yarn build:main",
+    "build": "yarn build:ui && yarn build:main",
     "build:main": "esbuild src/plugin/code.ts --bundle --outfile=dist/code.js",
     "build:ui": "vite build --minify esbuild --emptyOutDir=false",
     "build:watch": "concurrently -n widget,iframe \"yarn build:main -- --watch\" \"yarn build:ui -- --watch\"",
@@ -20,14 +20,15 @@
   },
   "dependencies": {
     "buffer": "^6.0.3",
-    "clipboard": "2.0.11",
     "react": "^17.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@figma/plugin-typings": "1.54.1",
-    "@types/react-dom": "^17.0.0",
     "@types/react": "^17.0.0",
+    "@types/react-copy-to-clipboard": "^5.0.4",
+    "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "concurrently": "^6.3.0",
     "esbuild": "0.15.12",
