replace psd-tools with psd-ts

--- a/packages/octopus-psd/package.json
+++ b/packages/octopus-psd/package.json
@@ -10,6 +10,7 @@
     "clean": "rimraf ./node_modules ./lib ./dist ./workdir ./test/integration/report ./jsdoc",
     "convert:debug": "yarn build && node ./lib/examples/node/convert-debug.js",
     "convert:local": "yarn build && node ./lib/examples/node/convert-local.js",
+    "convert:bulk": "yarn clean:workdir && yarn build && node ./lib/examples/node/convert-bulk.js",
     "prepack": "rimraf ./lib && yarn run build",
     "test": "yarn test:unit && yarn test:integration",
     "test:unit": "yarn build && yarn node --experimental-vm-modules $(yarn bin jest)",
@@ -26,12 +27,12 @@
     "@opendesign/octopus-ts": "3.0.0-alpha.38",
     "@types/chalk": "^2.2.0",
     "@types/lodash": "^4.14.178",
-    "@types/pino": "^6.3.3",
     "@types/rimraf": "^3.0.2",
     "@types/uuid": "^8.3.1",
     "chalk": "^4.1.2",
     "dotenv": "16.0.0",
     "image-size": "^1.0.1",
+    "jimp": "^0.16.2",
     "lodash": "^4.17.21",
     "paper": "0.12.15",
     "pino": "^6.7.0",
@@ -41,6 +42,8 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/pino-pretty": "4.7.5",
+    "@types/pino-std-serializers": "2.4.1",
     "@types/jest": "^27.4.0",
     "@types/node": "*",
     "handlebars": "^4.7.7",
