--- a/packages/octopus-fig/package.json
+++ b/packages/octopus-fig/package.json
@@ -34,6 +34,7 @@
     "@types/uuid": "^8.3.1",
     "buffer": "^6.0.3",
     "dotenv": "16.0.0",
+    "eventemitter3": "^5.0.0",
     "image-size": "^1.0.1",
     "lodash": "^4.17.21",
     "paper": "0.12.15",
