--- a/packages/octopus-psd/package.json
+++ b/packages/octopus-psd/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@avocode/psd-parser": "0.8.4",
+    "@opendesign/psd-ts": "0.0.0-experimental-bdd7ebbc",
     "@opendesign/manifest-ts": "3.0.0-alpha.38",
     "@opendesign/octopus-common": "3.0.0-rc.27",
     "@opendesign/octopus-ts": "3.0.0-alpha.38",
