--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -3,7 +3,7 @@ name: Verify
 on:
   pull_request:
   push:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   verify:
@@ -13,19 +13,24 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
-      - run: node -v 
-      - run: yarn -v 
+      - run: node -v
+      - run: yarn -v
       - name: install
         run: yarn
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: build
+        run: yarn build
       - name: prettier
         run: yarn lint:prettier
       - name: eslint
         run: yarn lint:eslint
-      - name: build
-        run: yarn build
       - name: test
         run: yarn test
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: reports
+          path: ${{ github.workspace }}/packages/**/report/*.html
