FigmaPlugin - fix version

--- a/packages/figma-source-plugin/src/plugin/tsconfig.json
+++ b/packages/figma-source-plugin/src/plugin/tsconfig.json
@@ -3,6 +3,8 @@
     "target": "ES2019",
     "lib": ["ES2019"],
     "strict": true,
-    "typeRoots": ["../../node_modules/@types", "../../node_modules/@figma"]
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "typeRoots": ["../../node_modules/@figma"]
   }
 }
