--- a/packages/octopus-fig/package.json
+++ b/packages/octopus-fig/package.json
@@ -14,12 +14,14 @@
     "convert:source:debug": "ts-node ./examples/node/convert-plugin-source-debug.ts",
     "convert:source:local": "ts-node ./examples/node/convert-plugin-source-local.ts",
     "prepack": "rimraf ./lib && yarn run build",
-    "test": "yarn test:unit && yarn test:integration",
+    "test": "yarn test:unit && yarn test:integration && yarn test:squid",
     "test:unit": "yarn jest",
     "test:integration": "ts-node test/integration",
     "test:integration:update": "yarn test:integration:update:assets && yarn test:integration:update:tests",
     "test:integration:update:assets": "ts-node test/integration/update-assets.ts",
     "test:integration:update:tests": "ts-node test/integration/update-tests.ts",
+    "test:squid": "ts-node test/squid-plugin",
+    "test:squid:update": "ts-node test/squid-plugin/update-tests.ts",
     "types:check": "tsc --noEmit",
     "typedoc": "typedoc --excludePrivate src/index-node.ts src/index-web.ts",
     "watch": "tsc -w"
