--- a/packages/octopus-psd/package.json
+++ b/packages/octopus-psd/package.json
@@ -42,6 +42,8 @@
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "@types/node": "*",
+    "@types/pino-std-serializers": "2.4.1",
+    "@types/pino-pretty": "4.7.5",
     "handlebars": "^4.7.7",
     "jest": "^27.3.1",
     "jsondiffpatch": "^0.4.1",
