--- a/packages/octopus-psd/package.json
+++ b/packages/octopus-psd/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opendesign/octopus-psd",
-  "version": "3.0.0-rc.7",
+  "version": "3.0.0-webtoon-20230125",
   "description": "Octopus PSD converter, converts .psd files to Octopus 3+ format.",
   "license": "Apache-2.0",
   "type": "module",
@@ -23,11 +23,11 @@
     "@opendesign/manifest-ts": "3.0.0-alpha.38",
     "@opendesign/octopus-common": "3.0.0-rc.27",
     "@opendesign/octopus-ts": "3.0.0-alpha.38",
-    "@webtoon/psd-ts": "npm:@opendesign/psd-ts@0.5.1-add-padding-pattern-20230124",
     "@types/chalk": "^2.2.0",
     "@types/lodash": "^4.14.178",
     "@types/rimraf": "^3.0.2",
     "@types/uuid": "^8.3.1",
+    "@webtoon/psd-ts": "npm:@opendesign/psd-ts@0.5.1-add-padding-pattern-20230124",
     "chalk": "^4.1.2",
     "dotenv": "16.0.0",
     "image-size": "^1.0.1",
