--- a/packages/octopus-fig/package.json
+++ b/packages/octopus-fig/package.json
@@ -11,8 +11,8 @@
     "clean": "rimraf ./node_modules ./lib ./dist ./workdir ./test/integration/report",
     "convert:api:debug": "ts-node ./examples/node/convert-api-debug.ts",
     "convert:api:local": "ts-node ./examples/node/convert-api-local.ts",
-    "convert:source:debug": "ts-node ./examples/node/convert-plugin-source-debug.ts",
-    "convert:source:local": "ts-node ./examples/node/convert-plugin-source-local.ts",
+    "convert:squid:debug": "ts-node ./examples/node/convert-plugin-squid-debug.ts",
+    "convert:squid:local": "ts-node ./examples/node/convert-plugin-squid-local.ts",
     "prepack": "rimraf ./lib && yarn run build",
     "test": "yarn test:unit && yarn test:integration && yarn test:squid",
     "test:unit": "yarn jest",
