--- a/packages/octopus-fig/package.json
+++ b/packages/octopus-fig/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opendesign/octopus-fig",
-  "version": "3.0.0-rc.22",
+  "version": "3.0.0-rc.25",
   "description": "Figma HTTP API format to Octopus 3+ converter.",
   "license": "Apache-2.0",
   "scripts": {
@@ -30,7 +30,8 @@
     "@opendesign/octopus-common": "3.0.0-rc.27",
     "@opendesign/octopus-ts": "3.0.0-alpha.40",
     "@types/lodash": "^4.14.178",
-    "@types/pino": "^6.3.3",
+    "@types/pino-std-serializers": "2.4.1",
+    "@types/pino-pretty": "4.7.5",
     "@types/uuid": "^8.3.1",
     "dotenv": "16.0.0",
     "eventemitter3": "^5.0.0",
