--- a/packages/figma-parser/package.json
+++ b/packages/figma-parser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opendesign/figma-parser",
-  "version": "3.0.0-rc.15",
+  "version": "3.0.0-rc.16",
   "description": "Figma parser, downloads assets from Figma APIs",
   "license": "Apache-2.0",
   "scripts": {
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.178",
-    "@types/pino": "^6.3.3",
+    "@types/pino-std-serializers": "2.4.1",
+    "@types/pino-pretty": "4.7.5",
     "@types/uuid": "^8.3.1",
     "dotenv": "16.0.0",
     "eventemitter3": "^4.0.7",
