--- a/packages/octopus-fig/package.json
+++ b/packages/octopus-fig/package.json
@@ -8,7 +8,7 @@
     "bundle:web": "npx vite build -c vite.web.js && npx vite build -c vite.web.worker.js",
     "build": "tsc --build ./tsconfig.json",
     "clean:workdir": "rimraf ./workdir/*",
-    "clean": "rimraf ./node_modules ./lib ./dist ./workdir ./test/integration/report",
+    "clean": "rimraf ./node_modules ./lib ./dist ./workdir ./test/**/report",
     "convert:api:debug": "ts-node ./examples/node/convert-api-debug.ts",
     "convert:api:local": "ts-node ./examples/node/convert-api-local.ts",
     "convert:squid:debug": "ts-node ./examples/node/convert-plugin-squid-debug.ts",
