--- a/packages/octopus-fig/package.json
+++ b/packages/octopus-fig/package.json
@@ -29,9 +29,9 @@
   },
   "dependencies": {
     "@opendesign/figma-parser": "3.0.0-rc.17",
-    "@opendesign/manifest-ts": "3.0.0-alpha.41",
+    "@opendesign/manifest-ts": "3.0.1",
     "@opendesign/octopus-common": "3.0.0-rc.28",
-    "@opendesign/octopus-ts": "3.0.0-alpha.41",
+    "@opendesign/octopus-ts": "3.0.1",
     "@types/lodash": "^4.14.178",
     "@types/uuid": "^8.3.1",
     "dotenv": "16.0.0",
