Spec update + versions update

--- a/packages/octopus-xd/package.json
+++ b/packages/octopus-xd/package.json
@@ -18,9 +18,9 @@
     "types:check": "tsc --noEmit"
   },
   "dependencies": {
-    "@opendesign/manifest-ts": "3.0.0-alpha.41",
+    "@opendesign/manifest-ts": "3.0.1",
     "@opendesign/octopus-common": "3.0.0-rc.28",
-    "@opendesign/octopus-ts": "3.0.0-alpha.41",
+    "@opendesign/octopus-ts": "3.0.1",
     "@types/blueimp-md5": "^2.18.0",
     "@types/lodash": "^4.14.178",
     "@types/pino": "^6.3.3",
