--- a/packages/octopus-ai/package.json
+++ b/packages/octopus-ai/package.json
@@ -25,9 +25,9 @@
     "prepack": "rimraf ./lib && yarn run build"
   },
   "dependencies": {
-    "@opendesign/manifest-ts": "3.0.0-alpha.41",
+    "@opendesign/manifest-ts": "3.0.1",
     "@opendesign/octopus-common": "3.0.0-rc.28",
-    "@opendesign/octopus-ts": "3.0.0-alpha.41",
+    "@opendesign/octopus-ts": "3.0.1",
     "@opendesign/illustrator-parser-pdfcpu": "^1.0.4-0",
     "dotenv": "16.0.0",
     "lodash": "^4.17.21",
