--- a/packages/octopus-psd/package.json
+++ b/packages/octopus-psd/package.json
@@ -21,9 +21,9 @@
   },
   "dependencies": {
     "@avocode/psd-parser": "0.8.4",
-    "@opendesign/manifest-ts": "3.0.0-alpha.41",
+    "@opendesign/manifest-ts": "3.0.1",
     "@opendesign/octopus-common": "3.0.0-rc.28",
-    "@opendesign/octopus-ts": "3.0.0-alpha.41",
+    "@opendesign/octopus-ts": "3.0.1",
     "@types/chalk": "^2.2.0",
     "@types/lodash": "^4.14.178",
     "@types/rimraf": "^3.0.2",
