--- a/packages/octopus-ai/package.json
+++ b/packages/octopus-ai/package.json
@@ -24,10 +24,10 @@
     "prepack": "yarn run build"
   },
   "dependencies": {
-    "@opendesign/manifest-ts": "3.0.1",
-    "@opendesign/octopus-ts": "3.0.1",
-    "@opendesign/octopus-common": "3.0.0-rc.29",
     "@opendesign/illustrator-parser-pdfcpu": "1.1.2",
+    "@opendesign/manifest-ts": "3.0.1",
+    "@opendesign/octopus-common": "3.0.0-rc.29",
+    "@opendesign/octopus-ts": "3.0.1",
     "dotenv": "16.0.0",
     "lodash": "^4.17.21",
     "paper": "^0.12.15",
@@ -45,14 +45,15 @@
     "@types/rimraf": "^3.0.2",
     "@types/uuid": "^8.3.1",
     "chalk": "^4.1.2",
+    "enhanced-resolve": "^5.12.0",
     "handlebars": "^4.7.7",
     "jest": "^27.3.1",
     "jsondiffpatch": "^0.4.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
-    "ts-node": "10.4.0",
-    "typescript": "4.7.4",
-    "typedoc": "^0.23.18"
+    "ts-node": "^10.4.0",
+    "typedoc": "^0.23.18",
+    "typescript": "4.7.4"
   },
   "files": [
     "dist/src",
